--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
   <string name="app_name">AssignmentTask</string>
   <string name="noti_channel_default">file_download</string>
   <string name="in_progress">in progress</string>
-  <string name="file_upload_successful">success dowonloaded</string>
+  <string name="file_upload_successful">success downloaded</string>
 </resources>
